edmm-core/src/main/resources/plugins/terraform/aws_security_group.tf
resource "aws_security_group" "${aws_security_group_name}" {
  name = "${aws_security_group_name}"
  vpc_id = aws_vpc.default.id
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ${ingress_template}
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
